--- a/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
+++ b/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
@@ -119,6 +119,9 @@
   <ItemGroup>
     <ClCompile Include="program.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mutex.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
