--- a/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
+++ b/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="program.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Count.h" />
     <ClInclude Include="mutex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
