[code snippet][014][MultiThread] [Refactor] Move function couting to counting.h

--- a/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
+++ b/CodeSnippet/MultiThreadConsole/MultiThreadConsole.vcxproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Count.h" />
+    <ClInclude Include="counting.h" />
     <ClInclude Include="mutex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
